Fixing Java8 compatibility